--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
         </div>
     </footer>
 
-    <script src="js/app.js"></script>
+    <script type="module" src="js/main.js"></script>
 </body>
 
 </html>
